post thing happens now
there is a json file that holds it all together

--- a/flasks/static/CSS/main.css
+++ b/flasks/static/CSS/main.css
@@ -1,7 +1,54 @@
+html {
+	height: 100%;
+}
 body {
 	font-family: sans-serif;
-	color: white;
-	background-color: gray;
-	padding-top: 30px;
-	padding-left: 50px;
+	color: #FEB;
+	background-color: #000616;
+	padding: 0;
+	margin: 0;
+	height: 100%;
 }
+
+/* navigation */
+.nav {
+	background-color: white;
+	width: 100%;
+	margin: 0;
+	padding: 0;
+	top: 0;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: fixed;
+	z-index: 1;
+}
+
+.nav h1 {
+	color: #000616;
+}
+
+.nav-toggle {
+	height: 100px;
+	width: 100px;
+	margin: 5px;
+}
+
+.facebubble {
+	background-image: url("../img/MyFace_0.png");
+	background-size: cover;
+	/*background-position: center;*/
+	background-repeat: no-repeat;
+	height: 100px;
+	width: 100px;
+	margin: 5px;
+	border-radius: 50%;
+	box-shadow: inset 0 0 .5em black;
+}
+
+.main {
+	color: #000616;
+	padding-top: 100px;
+	background-color: #f6f0e8;
+}
+
