--- a/flasks/templates/home.html
+++ b/flasks/templates/home.html
@@ -1,88 +1,15 @@
 {% extends "header.html" %}
 {% block title %}Zac's Site{% endblock %}
 {% block body %}
-	<div class="row">
-		<div class="col-md-6">
-			<div class="page-header">
-				<h1>
-					About Zac <small>All anyone would want to know.</small>
-				</h1>
-			</div>
-			<h2>
-				Who am I?
-			</h2>
-			<p>
-				I am an aspiring developer who has experience in many aspects of programing and design, from server side setup to forward facing sites. I have interned in Cambridge UK and have numerous personal projects. As a military brat i have traveled and lived in many divise places, making communication and open mindedness top skills in my skill set; I'm a fast learner and I’m self taught in many aspects of software design and devops, not afraid of command lines and unix. As a problem solver I'm ready to tackle new and exciting projects.      
-			</p>
-			<h2>
-				Contact me!
-			</h2>
-			<p>
-				Feel free to email me, find me on linked In, or google+.
-			</p>
-			<p>
-				<a class="btn" href="mailto:zax.zm2@gmail.com">Email »</a>
-				<a class="btn" href="#">Linked In »</a>
-				<a class="btn" href="#">Google+ »</a>
-			</p>
-		</div>
-		<div class="col-md-6">
-			<div class="page-header">
-				<h1>
-					Projects! <small>The things that I have done.</small>
-				</h1>
-			</div>
-			<div class="row">
-				<div class="col-md-4">
-					<div class="thumbnail">
-						<img alt="Bootstrap Thumbnail First" src="http://lorempixel.com/output/people-q-c-600-200-1.jpg" />
-						<div class="caption">
-							<h3>
-								AutoText
-							</h3>
-							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-							</p>
-							<p>
-								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="thumbnail">
-						<img alt="Bootstrap Thumbnail Second" src="http://lorempixel.com/output/city-q-c-600-200-1.jpg" />
-						<div class="caption">
-							<h3>
-								Web Sites 
-							</h3>
-							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-							</p>
-							<p>
-								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
-							</p>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="thumbnail">
-						<img alt="Bootstrap Thumbnail Third" src="http://lorempixel.com/output/sports-q-c-600-200-1.jpg" />
-						<div class="caption">
-							<h3>
-								Project Bus
-							</h3>
-							<p>
-								Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
-							</p>
-							<p>
-								<a class="btn btn-primary" href="#">Action</a> <a class="btn" href="#">Action</a>
-							</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+<div class="main">
+	<ul>
+	{% for post in posts %}
+  		<li>
+  			<h2>{{ post.name }}</h2>
+  		</li>
+	{% endfor %}
+	</ul>
+	
+</div>
 
 {% endblock %}
